<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_msgs_enum_resolver</name>
  <version>1.0.0</version>
  <description>
    Static C++ and Python utility that resolves ROS2 message numeric constants
    to their symbolic names (and vice-versa) by reading .msg / .srv / .action
    files directly from the ament_index at runtime.
    Includes enum_echo: a CLI tool to subscribe to any topic and display
    messages with numeric constants decoded to their symbolic names.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/you/ros2_msgs_enum_resolver</url>
  <url type="bugtracker">https://github.com/you/ros2_msgs_enum_resolver/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>rosidl_runtime_py</depend>

  <!-- ros2topic provides TopicNameCompleter for tab completion -->
  <exec_depend>ros2topic</exec_depend>
  <!-- python3-argcomplete enables tab completion in the shell -->
  <exec_depend>python3-argcomplete</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>